apps/releases/03-core/raw/directus/directus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: directus
  namespace: directus
spec:
  selector:
    app: directus
  ports:
    - port: 80
      targetPort: 8055
