apps/releases/03-core/raw/directus/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: directus-postgres
  namespace: directus
spec:
  selector:
    app: directus-postgres
  ports:
    - port: 5432
      targetPort: 5432
